syntax = "proto3";

package vorpal.agent.v0;

option go_package = "github.com/ALT-F4-LLC/vorpal/sdk/go/api/v0/agent";

import "v0/artifact/artifact.proto";

service AgentService {
    rpc PrepareArtifact(PrepareArtifactRequest) returns (stream PrepareArtifactResponse) {}
}

message PrepareArtifactRequest {
  string artifact_context = 1;
  vorpal.artifact.v0.Artifact artifact = 2;
}

message PrepareArtifactResponse {
  optional string artifact_digest = 1;
  optional string artifact_output = 2;
  vorpal.artifact.v0.Artifact artifact = 3;
}
