syntax = "proto3";

package vorpal.registry.v0;

option go_package = "github.com/ALT-F4-LLC/vorpal/sdk/go/api/v0/registry";

service RegistryService {
    rpc Exists(RegistryRequest) returns (RegistryResponse);
    rpc Push(stream RegistryPushRequest) returns (RegistryResponse);
    rpc Pull(RegistryRequest) returns (stream RegistryPullResponse);
}

enum RegistryKind {
    UNKNOWN_STORE_KIND = 0;
    ARTIFACT = 1;
    ARTIFACT_SOURCE = 2;
}

message RegistryRequest {
    RegistryKind kind = 1;
    string hash = 2;
    string name = 3;
}

message RegistryResponse {
    bool success = 1;
}

message RegistryPushRequest {
    RegistryKind kind = 1;
    bytes data = 2;
    bytes data_signature = 3;
    string hash = 4;
    string name = 5;
}

message RegistryPullResponse {
    bytes data = 1;
}
